Create .bash_profile scripts for tomcat users